# Manager-backend

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
.ebextensions/: 01_gunicorn.config  01_nginx_config_customize.config  django.config  nginx.conf  nginx.config
.elasticbeanstalk/: config.yml
advertisings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
advertisings/migrations/: 0001_initial.py  0002_initial.py
brands/: admin.py  models.py  serializers.py  urls.py  views.py
brands/migrations/: 0001_initial.py  0002_initial.py  0003_alter_brand_description.py  0003_alter_brand_name.py  0003_alter_data_expense_and_more.py  0003_data.py  0004_rename_data_branddata.py  0005_expensebyhand.py
common/: models.py
config/: settings.py  urls.py  views.py
events/: admin.py  models.py  serializers.py  urls.py  views.py
events/migrations/: 0001_initial.py
pages/: admin.py  models.py  serializers.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_alter_page_page_date.py  0003_alter_page_brand_alter_page_page_date.py  0004_alter_page_brand.py  0005_alter_page_brand.py  0006_alter_page_page_date.py  0007_alter_page_page_date.py
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0010_event.py  (+13 more)
retrieves/: apps.py  urls.py  views.py
sales/: admin.py  models.py  serializers.py  urls.py  views.py
sites/: admin.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
visits/: admin.py  models.py  serializers.py  urls.py  views.py
(+13 files in other folders)
