[tool.poetry]
name = "manager-backend"
version = "0.1.0"
description = ""
authors = ["ohnas <ohnas12@gmail.com>"]
readme = "README.md"
packages = [{include = "manager_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
